RMagick 1.7.0
    o Added splice method to Image class (ImageMagick 6.0.0)
    o Added set_channel_depth to Image class (ImageMagick 6.0.0)
    o Added blur_channel to Image class (ImageMagick 6.0.1)
    o Added get_multiline_type_metrics to Draw class (ImageMagick 6.1.5)
    o Fixed bug #1048, memory leak in Image#to_blob

RMagick 1.6.1
    o Changed to match changes in ImageMagick 6.1.4 API
    o Fixed bug #950

RMagick 1.6.0
    o Added posterize, gaussian_blur_channel, convolve_channel methods to Image class
      (ImageMagick 6.0.0)
    o Added new CompositeOperator constants (ImageMagick 6.0.0)
    o Added trim and trim! methods to Image class
    o Added each method to Enum subclasses
    o Added stroke_width= attribute to the Draw class
    o Fixed bugs #624, #642, #716, applied patch #819 (thanks to Daniel Quimper)
    o Tested with ImageMagick 6.0.5-2, GraphicsMagick 1.1.3, Ruby 1.8.2

RMagick 1.5.0
    o Added meaningful implementations of dup and clone to the Image and Draw
      classes. Clarified the documentation.
    o Do not allow changes to frozen Image, ImageList, and Draw objects.
    o Raise TypeError if freeze method sent to Image::Info or ImageList::Montage
      object.
    o Added view method to Image, Image::View class (thanks to Ara T. Howard and
      Charles Comstock on c.l.r for the discussion which prompted me to add this class)
    o Added grayscale_pseudo_class method to Image class (GraphicsMagick 1.1)
    o Added radial_blur, random_threshold_channel methods to Image class
      (ImageMagick 6.0.0)
    o Added quantum_operator method to Image class (GraphicsMagick 1.1, ImageMagick 6.0.0)
    o Added statistics method to Image class (GraphicsMagick 1.1)
    o Support channel_extrema, channel_mean with GraphicsMagick 1.1
    o Added endian attribute to Image class
    o Added composite! method to Image class
    o Deprecated random_channel_threshold method when linked with ImageMagick 6.0.0.

RMagick 1.4.0